--- a/ch07/home.html
+++ b/ch07/home.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div {
+            border-radius: 5px;
+            background-color: olive;
+            padding: 20px
+        }
+        input[type=submit] {
+            background-color: olivedrab;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 40%;
+            border-radius: 5px;
+            width: 20%;
+        }
+        input[type=submit]:hover {
+            background-color: mediumseagreen;
+        }
+        input[type=text], select {
+            width: 80%;
+            display: inline-block;
+            padding: 12px 15px;
+            margin: 10px 0;
+            border: 1px solid white;
+            border-radius: 3px;
+        }
+        #fname {
+            position: relative;
+        }
+    </style>
 </head>
-
 <body>
-    <hr>
-     aaaaa
-    </hr>
+    <h3>Form Tag</h3>
+    <div>
+        <form action="">
+            <lable for="fname">FirstName</lable><br>
+            <input type="text" id="fname" name="firstName" placeholder="your first name"><br><br>
+            <lable for="lname">LastName</lable><br>
+            <input type="text" id="lname" name="lastName" placeholder="your last name"><br><br>
+            <lable for="country">Country</lable><br>
+            <select id="country" name="country">
+                <option value="">Korea</option>
+                <option value="">China</option>
+                <option value="">Japan</option>
+            </select><br>
+            <input type="submit" value="OK">
+        </form>
+    </div>
 </body>
-
 </html>
