--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index.html</title>
     <style>
-        a:link {
-            opacity: 0.5;
+        #show>div {
+            display: inline-block;
+            background: bisque;
+            margin: 0px 5px;
         }
-        a:hover {
-            opacity: 1.0;
-        }
-        img {
-            opacity: 0.2;
-        }
-        img:hover {
-            opacity: 1.0;
+        div.row {
+            display: block;
+            width: 100%;
+            height: 0;
         }
     </style>
-    <script src="basic.js"></script>
 </head>
 <body>
-    
+    <div id="show"></div>
+    <!-- <script src="../js/multiply.js"></script> -->
+    <script src="/js/basics.js"></script>
 </body>
 </html>
