--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     </style>
 </head>
 <body>
-    <div id="show"></div>
+    <div id="show">
+
+    </div>
     <!-- <script src="../js/multiply.js"></script> -->
-    <script src="/js/basics.js"></script>
+    <!-- <script src="/js/basics.js"></script> -->
+    <!-- <script src="/js/variable.js"></script> -->
+    <!-- <script src="/js/array.js"></script> -->
+    <script src="/js/function.js"></script>
 </body>
 </html>
