--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
-    <style>
-        #show>div {
-            display: inline-block;
-            background: bisque;
-            margin: 0px 5px;
-        }
-        div.row {
-            display: block;
-            width: 100%;
-            height: 0;
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <div id="show">
+    <!-- <div id="show">
+        <button id = 'turnOn'>TurnOn</button>
+        <img src="images/off.gif" alt="" width="100px">
+        <button id = 'turnOff'>TurnOff</button>
+    </div>
+    <div id="new">
+        <button>One</button>
+        <button>Two</button>
+        <button>Three</button>
+        <button>Four</button>
+        <button>Five</button>
+    </div> -->
+    <!-- <script src="/js/event.js"></script>
+    <script src="/js/object.js"></script> -->
+    <!-- <script src="/js/object_ary.js"></script> -->
+    <div id="result">
 
     </div>
-    <!-- <script src="../js/multiply.js"></script> -->
-    <!-- <script src="/js/basics.js"></script> -->
-    <!-- <script src="/js/variable.js"></script> -->
-    <!-- <script src="/js/array.js"></script> -->
-    <script src="/js/function.js"></script>
+    year: <input type="text" value="2020" name="year"><br>
+    month: <input type="text" value="5" name="month"><br>
+    day: <input type="text" value="5" name="day"><br>
+    <button id='showBtn'>Show</button>
+    <script src="/js/object_date.js"></script>
 </body>
 </html>
