--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,8 @@
     </div> -->
     <!-- <script src="/js/event.js"></script>
     <script src="/js/object.js"></script> -->
-    <!-- <script src="/js/object_ary.js"></script> -->
-    <div id="result">
+    <script src="/js/object_ary.js"></script>
+    <!-- <div id="result">
 
     </div>
     year: <input type="text" value="2020" name="year"><br>
@@ -29,5 +29,6 @@
     day: <input type="text" value="5" name="day"><br>
     <button id='showBtn'>Show</button>
     <script src="/js/object_date.js"></script>
+    <script src="/js/dom.js"></script> -->
 </body>
 </html>
